# file-manager

./: .gitignore  PROJECT_SUMMARY.md  README.md
client/: README.md  package.json
client/angular-app/: angular.json  package.json  tsconfig.json
client/angular-app/src/: index.html  styles.scss  vscode-theme.scss
client/angular-app/src/app/: app.component.ts
client/angular-app/src/app/components/: action-bar.component.ts  address-bar-autocomplete.component.ts  address-bar.component.ts  file-browser.component.html  file-browser.component.scss  file-browser.component.ts  file-entry.component.ts  file-list.component.ts  file-pane.component.ts  filter-bar.component.ts  global-search.component.html  global-search.component.scss  global-search.component.ts  keyboard-help.component.html  keyboard-help.component.scss  keyboard-help.component.ts  path-history-viewer.component.ts  tab-bar.component.ts  tab.component.ts  toolbar.component.ts  workspace-selector.component.ts
client/angular-app/src/app/services/: api.service.ts  archive.service.ts  filter.service.ts  global-search.service.ts  keyboard.service.ts  path-history.service.ts  shortcut-registry.service.ts  theme.service.ts  workspace.service.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
docs/: ARCHITECTURE.md  FEATURE_ROADMAP.md  INSTALLATION.md  KEYBOARD_INTEGRATION.md  QUICKSTART.md  README.md  ROADMAP.md  STYLING_GUIDE.md  SUMMARY.md  breakdown-complete.md  file-browser-refactoring-plan.md  refactoring-implementation-guide.md  tab-width-fix.md  vscode-style-tabs.md
server/: Cargo.toml  README.md
server/src/: archive.rs  commands.rs  handlers.rs  main.rs  protocol.rs  ws.rs
shared-types/: package.json  protocol-enhanced.ts  protocol.ts
