[package]
name = "file-manager-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = "0.4"
walkdir = "2"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
futures-util = "0.3"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.50"
winapi = { version = "0.3", features = ["fileapi", "winbase", "winnt"] }