[package]
name = "file-manager-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = "0.4"
walkdir = "2"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
futures-util = "0.3"

# Archive support (existing)
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "1"
zstd = "0.13"

# Additional archive formats
sevenz-rust = "0.5"           # 7z support
rar = "0.2"                   # RAR support
cab = "0.4"                   # CAB support
arj = "0.2"                   # ARJ support
lzh = "0.2"                   # LZH support
ace = "0.1"                   # ACE support

# Platform-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.50"
winapi = { version = "0.3", features = ["fileapi", "winbase", "winnt"] }
libc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"