[package]
name = "file-manager-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
chrono = "0.4"
walkdir = "2"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
futures-util = "0.3"
which = "5.0"                    # For finding external tools
tempfile = "3.8"                  # For temporary directories in fallback operations

# Existing archive support
zip = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
zstd = "0.13"

# 7z support - latest version
sevenz-rust = { version = "0.6", features = ["aes256", "compress"] }

# Alternative RAR support (if needed - sevenz-rust can handle RAR through codecs)
# unrar = "0.5"  # Optional if you need dedicated RAR support

# CAB support
cab = "0.4"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.50"
winapi = { version = "0.3", features = ["fileapi", "winbase", "winnt"] }
libc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"